// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render automatic tab 1`] = `
.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c19:hover,
.c19:focus {
  background: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 100px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Server
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            Use below script to add a server to your cluster. This script will install the Teleport agent to provide secure access to your server.
            <div
              class="c12"
            >
              The script will be valid for
               
              <span
                class="c13"
              >
                4 hours
                .
              </span>
            </div>
          </div>
          <div
            class="c14"
          >
            <div
              class="c15"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c16"
              >
                $
              </div>
              <div>
                some bash script
              </div>
            </div>
            <button
              class="c17"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
          <div
            class="c18"
          >
            <a
              class="c19 c17"
              kind="primary"
            >
              Regenerate Script
            </a>
          </div>
        </div>
        <div
          class="c20"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed automatic tab 1`] = `
.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c11 a {
  color: #FFFFFF;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 100px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Server
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
            kind="danger"
          >
            some error message
          </div>
        </div>
        <div
          class="c12"
        >
          <button
            class="c13"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with local user 1`] = `
.c11 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c15 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 100px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Server
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c13"
            >
              <a
                class="c14"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-darwin-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c14"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c15"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=node --ttl=1h
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c12"
            >
              Step 4
            </span>
             - Start the Teleport agent with the following parameters
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  teleport start --roles=node --token=[generated-join-token] --auth-server=localhost:443 
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c20"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with sso user 1`] = `
.c11 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c15 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-left: 24px;
  align-items: center;
  display: flex;
  padding: 4px 8px;
  cursor: pointer;
  border-bottom: 4px solid transparent;
  font-weight: 500;
  border-bottom: 4px solid #651FFF;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 328px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 100px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Server
          </div>
          <div
            class="c7"
          >
            <span
              class="c8 icon icon-magic-wand sc-AxhCb c8"
              color="light"
            />
            Automatically
          </div>
          <div
            class="c9"
          >
            <span
              class="c8 icon icon-cog sc-AxhCb c8"
              color="light"
            />
            Manually
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c13"
            >
              <a
                class="c14"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-darwin-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c14"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c15"
                href="https://get.gravitational.com/teleport-ent-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=node --ttl=1h
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c12"
            >
              Step 4
            </span>
             - Start the Teleport agent with the following parameters
            <div
              class="c16"
            >
              <div
                class="c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                >
                  $
                </div>
                <div>
                  teleport start --roles=node --token=[generated-join-token] --auth-server=localhost:443 
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c20"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
